# emojis

./: Cargo.toml  README.md
.github/workflows/: build.yaml
generate/src/: main.rs  unicode.rs
src/: lib.rs
tests/: serde.rs
