[package]
name = "emojis"
version = "0.6.2"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
rust-version = "1.60"
description = "✨ Lookup emoji in *O(1)* time, access metadata and GitHub shortcodes, iterate over all emoji, and more!"
readme = "README.md"
repository = "https://github.com/rossmacarthur/emojis"
license = "MIT OR Apache-2.0"
keywords = ["emoji", "unicode", "github", "gemoji"]
categories = ["text-processing", "no-std"]

[workspace]
members = ["generate"]

[dependencies]
phf = { version = "0.11.1", default-features = false }
serde = { version = "1.0.145", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.99"
toml = "0.5.11"

[features]
serde = ["dep:serde"]
